fix wrong font url

--- a/assets/styles/font.less
+++ b/assets/styles/font.less
@@ -17,14 +17,14 @@
 @font-face {
   font-family: 'Cabin';
   font-weight: 700;
-  src: url('~static/fonts/cabin/cabin-bold.ttf');
+  src: url('~static/fonts/cabin/bold.ttf');
 }
 
 // Neoneon
 @font-face {
   font-family: 'Neoneon';
   font-weight: 500;
-  src: url('~static/fonts/neoneon/regluar.otf');
+  src: url('~static/fonts/neoneon/regular.otf');
 }
 
 // Titilium
